--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -33,6 +33,8 @@
   --color-heading: var(--vt-c-text-light-1);
   --color-text: var(--vt-c-text-light-1);
 
+  --color-highlight: #0d6efd;
+
   --section-gap: 160px;
 }
 
